--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "actions-on-google": "^2.7.1",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.0.0"
+    "firebase-functions": "^3.0.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
